[package]
name = "gdrust_export_node_path_macro"
version = "0.1.0"
edition = "2021"

keywords = [
    "godot",
    "gdnative",
    "gdrust",
]

categories = [
    "game-development",
]

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "1.0.109", features = ["full"]}
heck = "0.5.0-rc.1"

[dev-dependencies]
gdnative = "0.11.3"

[lib]
proc-macro = true