[package]
name = "gdnative_export_node_as_path"
authors = ["Houtamelo"]
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "Boilerplate-code replacement macros when exporting node references through NodePath."
repository = "https://github.com/Houtamelo/gdnative_export_node_macro"
readme = "README.md"
keywords = ["godot", "gdnative", "nodepath", "godot-export", "proc-macro"]
categories = ["game-development", "api-bindings", "development-tools", "rust-patterns"]
exclude = ["tests/*", "target/*"]

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "1.0.109", features = ["full"]}
heck = "0.5.0-rc.1"
regex = "1.5.4"

[dev-dependencies]
gdnative = "0.11.3"

[lib]
proc-macro = true